Addressed some of comments

--- a/References/ToE_Ref.bib
+++ b/References/ToE_Ref.bib
@@ -1497,3 +1497,38 @@ publisher = {World Scientific
 address = {New Jersey, USA}
 }
 
+
+@article{cisneros-montemayor_ecosystem-based_2020,
+	title = {Ecosystem-based management can contribute to cooperation in transboundary fisheries: {The} case of pacific sardine},
+	volume = {221},
+	issn = {01657836},
+	shorttitle = {Ecosystem-based management can contribute to cooperation in transboundary fisheries},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0165783619302565},
+	doi = {10.1016/j.fishres.2019.105401},
+	language = {en},
+	urldate = {2021-07-13},
+	journal = {Fisheries Research},
+	author = {Cisneros-Montemayor, Andrés M and Ishimura, Gakushi and Munro, Gordon R. and Sumaila, U. Rashid},
+	month = jan,
+	year = {2020},
+	pages = {105401},
+	file = {Cisneros-Montemayor et al. - 2020 - Ecosystem-based management can contribute to coope.pdf:/Users/jepa/Zotero/storage/G92WY6JU/Cisneros-Montemayor et al. - 2020 - Ecosystem-based management can contribute to coope.pdf:application/pdf},
+}
+
+
+@article{cheung_marine_2021,
+	title = {Marine high temperature extremes amplify the impacts of climate change on fish and fisheries},
+	volume = {7},
+	issn = {2375-2548},
+	url = {https://www.science.org/doi/10.1126/sciadv.abh0895},
+	doi = {10.1126/sciadv.abh0895},
+	language = {en},
+	number = {40},
+	urldate = {2021-10-28},
+	journal = {Science Advances},
+	author = {Cheung, William W. L. and Frölicher, Thomas L. and Lam, Vicky W. Y. and Oyinlola, Muhammed A. and Reygondeau, Gabriel and Sumaila, U. Rashid and Tai, Travis C. and Teh, Lydia C. L. and Wabnitz, Colette C. C.},
+	month = oct,
+	year = {2021},
+	pages = {eabh0895},
+	file = {supplements:/Users/jepa/Zotero/storage/SIRSRB4K/Cheung et al. - 2021 - Marine high temperature extremes amplify the impac.pdf:application/pdf;cheung_mh2021:/Users/jepa/Zotero/storage/JYYUJJHZ/cheung_mh2021.pdf:application/pdf},
+}
