--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -106,7 +106,7 @@ my_lib(packages)
 # Abstract
 
 
-Climate change is shifting the distribution of shared fish stocks between neighboring countries’ Exclusive Economic Zones (EEZ) and the high seas. The timescale of these transboundary shifts determines how climate change will affect international fisheries governance. Coupling a large ensemble simulation of an Earth system model to a species distribution model, we show that by 2030, 23% of transboundary stocks would have shifted and 78% of the world EEZs will experience at least one shifting stock under a high emission climate change scenario. By the end of this century, 81% of EEZ waters will see at least one shifting stock with a total of 45% of stocks shifting globally, under a high emissions scenario. Importantly, many countries that are highly dependent on fisheries for income, food and nutrition security, as well as livelihoods emerge as hotspots for transboundary shifts showing early, and sometimes past shifts. Existing fisheries agreements need to be assessed for their capacity in addressing transboundary shifts, and strengthened where necessary to limit conflict over these fish stocks while new agreements are urged to considere this problematic in order to be resilient to global change.
+Climate change is shifting the distribution of shared fish stocks between neighboring countries’ Exclusive Economic Zones (EEZ) and the high seas. The timescale of these transboundary shifts determines how climate change will affect international fisheries governance. Coupling a large ensemble simulation of an Earth system model to a species distribution model, we show that by 2030, 23% of transboundary stocks would have shifted and 78% of the world EEZs will experience at least one shifting stock under a high emission climate change scenario. By the end of this century, 81% of EEZ waters will see at least one shifting stock with a total of 45% of stocks shifting globally, under a high emissions scenario. **Many countries that are highly dependent on fisheries for income, food and nutrition security, as well as livelihoods emerge as hotspots for transboundary shifts. These hotspots are characterized for showing early shifts in the distribution of important transboundary stocks.** Existing fisheries agreements need to be assessed for their capacity in addressing transboundary shifts, and strengthened where necessary to limit conflict over these fish stocks while new agreements are urged to **consider** this problematic in order to be resilient to global change.
 
 
 <!-- # Significant statement {-} -->
@@ -119,13 +119,13 @@ Climate change is shifting the distribution of shared fish stocks between neighb
 
 # Introduction
 
-Over the past century, human activities have dramatically altered the physical and biogeochemical conditions of the ocean, resulting in warmer, more acidic and less oxygenated waters [@IPCC:2019tn]. Marine species’ distributions reflect species’ preferences for discrete environmental conditions [@Hutchinson:1957nt]. As a result of changing ocean conditions, many marine species are shifting their distributions towards higher latitudes, deeper water or following local temperature gradients to remain within their optimal environmental “niche” [@Poloczanska:2016kk]. The biogeography of marine species is projected to continue to shift as ocean conditions change through the 21st century [@Cheung:2010dt], impacting fish stocks, fisheries production and economies [@Sumaila:2019ew]. These impacts are compromising our capacity to reach international sustainability goals under the United Nations (UN)  2030 Agenda for Sustainable Development such as Goal 14 - life below water [@UnitedNations2018; @Singh:2017ds; @Pecl:2017hu]. The projected risks and impacts can be reduced by improving the effectiveness of current governance and fisheries management, including for species that cross international borders, also known as ‘shared stocks’ [@Pinsky:2018cb].
+Over the past century, human activities have dramatically altered the physical and biogeochemical conditions of the ocean, resulting in warmer, more acidic and less oxygenated waters [@IPCC:2019tn]. Marine species’ distributions reflect species’ preferences for discrete environmental conditions [@Hutchinson:1957nt]. As a result of changing ocean conditions, many marine species are shifting their distributions towards higher latitudes, deeper water or following local temperature gradients to remain within their optimal environmental “niche” [@Poloczanska:2016kk]. The biogeography of marine species is projected to continue to shift as ocean conditions change through the 21st century [@Cheung:2010dt], impacting fish stocks, fisheries production and economies [@Sumaila:2019ew]. These impacts are compromising our capacity to reach international sustainability goals under the United Nations (UN)  2030 Agenda for Sustainable Development such as **Goals 14 - life below water and 17 - partnerships for the Goals** [@UnitedNations2018; @Singh:2017ds; @Pecl:2017hu]. The projected risks and impacts can be reduced by improving the effectiveness of current governance and fisheries management, including for species that cross international borders, also known as ‘shared stocks’ [@Pinsky:2018cb].
 
 The concept of shared stocks was developed following the ratification of the UN on the Law of the Sea (UNCLOS) and the claiming of Exclusive Economic Zones (EEZs) by Coastal States [@UnitedNations:1986tl]. As defined by the UN's Food and Agriculture Organization, shared stocks can be classified into four non-exclusive categories: (*i*) transboundary stocks, which cross neighboring EEZs; (*ii*) straddling stocks that, in addition to neighboring EEZs, also visit the adjacent high seas; (*iii*) highly migratory stocks, mainly tunas and bill-fishes, that migrate across vast oceanic regions including both the high seas and EEZs; and (*iv*) discrete stocks that are only present on the high seas [@Munro:2004th]. This study focuses on transboundary stocks exploited by fisheries operating within EEZs. Under UNCLOS, countries are responsible for the management of stocks within their EEZs and encouraged to cooperate when stocks are shared  [@UnitedNations:1986tl]. A recent study estimates that there are 633 transboundary fish species globally, representing 67% of identified exploited taxa. Between 2005 and 2010, these species yielded an annual average of 48 million tonnes of catch and USD 78 billion in fishing revenue [@PalaciosAbrantes:2020tv].
 
 Most fisheries management is poorly adapted to address species’ shifting distributions because of changing ocean conditions. The effectiveness of fisheries management for transboundary species is challenged by shifts in stocks’ distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by; @Pinsky:2020jx; @Oremus:2020id]. In most cases, catch or fishing effort quotas for transboundary stocks are based on historical records and do not necessarily consider the full distribution range of the stock [@FredstonHermann:2018kp], nor the effects of a changing climate on fish stocks and associated fisheries [@PalaciosAbrantes:2020tv; @Sumby:2021gw]. While many transboundary stocks experience natural seasonal variation in their distribution (e.g., migration, reproductive cycle), misalignment between fisheries resources' allocation and distributional shifts beyond such natural variation have previously resulted in unsustainable fishing levels and international disputes [@Miller:2013iv; @Spijkers:2017ij; @Crespo:2020cs]. For example, Pacific salmon species (*Oncorhynchus sp.*), jointly managed by Canada and the U.S., were heavily fished in the early 1990s after a stock shift favored the Alaskan fleet over the Canadian fleet [@Miller:2013iv]. Continuing climate change is expected to exacerbate such patterns [@Pinsky:2018cb; @Sumaila:2011bq]. Understanding when climate change will affect the sharing dynamics of transboundary stocks and the intensity of the resulting impacts is important for developing climate resilient international ocean governance and achieving the goals set out under the 2030 Agenda [@Pinsky:2018cb; @Link:2010ei; @Sumaila:2020tp].
 
-Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth system model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries/political entities under a high greenhouse gas emissions scenario (Methods). We then developed a Transboundary Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock’s abundance centroid and that of the EEZs that share a given stock (Fig. \@ref(fig:toeFigure1N)). By employing the concept of *time of emergence*, we estimate the year in which the 633 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variations (Fig. 1). Such estimation is based on two thresholds representing a 67 and a 95% probability of shift. Finally, we apply the Game Theory concept of *threat point* [See @Sumaila:2020tp; @Munro:1979dg for its application to fisheries] to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs (Methods). This assumes that countries are adapted to the historical sharing, but no country would be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a managed population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
+Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth system model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries/political entities under a high greenhouse gas emissions scenario (Methods). **We define a ‘stock’ unit as a species shared by neighboring EEZs.** Firthermore, we  developed a Transboundary Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock’s abundance centroid and that of the EEZs that share a given stock (Fig. \@ref(fig:toeFigure1N)). By employing the concept of *time of emergence*, we estimate the year in which the 633 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variations (Fig. 1). Such estimation is based on two thresholds representing a 67 and a 95% probability of shift. Finally, we apply the Game Theory concept of *threat point* [See @Sumaila:2020tp; @Munro:1979dg for its application to fisheries] to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs (Methods). This assumes that countries are adapted to the historical sharing, but no country would be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a managed population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
 
 ```{r toeFigure1N, eval = T,  echo = F, fig.width=14, fig.height=10, fig.pos="H", fig.cap =  "Schematic diagram of the transboundary index (TI) to determine the time of emergence of transboundary stocks from one Exclusive Economic Zone (EEZ) to another. The index is based on the distance between the distributional centroid of the transboundary stock and the geographic centroid of the neighboring EEZ sharing the stock (Top panel). Time of emergence is defined as the first year when the TI overshoots historical values (Bottom panel). Only showing a subset of ensemble members for clarity."}
 
@@ -152,11 +152,11 @@ grid.raster(img)
 
 ## Databases and species selection
 
-The analyses detailed herein are based on 633 exploited marine transboundary species that account for 80% of the catch taken from the world’s EEZs between 2005 and 2014 [@PalaciosAbrantes:2020tv]. When a species was shared by a pair of neighboring EEZs it was considered a transboundary stock [@PalaciosAbrantes:2020tv; @Teh:2015gd], resulting in a total of 9,132 transboundary stocks. Using the transboundary species Atlantic cod (*Gadus morhua*) as an example and this study’s definition of transboundary stock, the United States and Canada share a stock of Atlantic cod, and Canada and Greenland share a separate stock of Atlantic cod, but the United States and Greenland do not as they do not have juxtaposing EEZs. We defined the boundaries of the world’s EEZs using the Sea Around Us spatial division (updated 1 July 2015; http://www.seaaroundus.org), noting that it subdivides the EEZs of 198 coastal states into 280 regions (Fig. \@ref(fig:toeFigureS5)) including island territories. We determined the intersections between polygons using the R package sf [@PackagesfSimpleF:2018vp]. Each EEZ was categorized by geopolitical region according to the United Nations (https://population.un.org/wpp/DefinitionOfRegions/) and biome [@Reygondeau:2019uh]. The habitat preference of each species was determined following FishBase (http://www.fishbase.org) for fish species and SeaLifeBase (http://www.fishbase.org) for invertebrates (Table \@ref(tab:toeTableS1)). For each stock and EEZ, we used Sea Around Us data to estimate catch and fishing revenue from fishing activities. We report both average catch and revenue for the last available decade (2005-2014) [@Zeller2016; @Tai2017; @Sumaila:2015uc].
+The analyses detailed herein are based on 633 exploited marine transboundary species that account for 80% of the catch taken from the world’s EEZs between 2005 and 2014 [@PalaciosAbrantes:2020tv]. **We define a (transboundary) "stock" unit when a species was shared by a pair of neighboring EEZs [@PalaciosAbrantes:2020tv; @Teh:2015gd], resulting in a total of 9,132 transboundary stocks.** Using the transboundary species Atlantic cod (*Gadus morhua*) as an example and this study’s definition of transboundary stock, the United States and Canada share a stock of Atlantic cod, and Canada and Greenland share a separate stock of Atlantic cod, but the United States and Greenland do not as they do not have juxtaposing EEZs. We defined the boundaries of the world’s EEZs using the Sea Around Us spatial division (updated 1 July 2015; http://www.seaaroundus.org), noting that it subdivides the EEZs of 198 coastal states into 280 regions (Fig. \@ref(fig:toeFigureS5)) including island territories. We determined the intersections between polygons using the R package sf [@PackagesfSimpleF:2018vp]. Each EEZ was categorized by geopolitical region according to the United Nations (https://population.un.org/wpp/DefinitionOfRegions/) and biome [@Reygondeau:2019uh]. The habitat preference of each species was determined following FishBase (http://www.fishbase.org) for fish species and SeaLifeBase (http://www.fishbase.org) for invertebrates (Table \@ref(tab:toeTableS1)). For each stock and EEZ, we used Sea Around Us data to estimate catch and fishing revenue from fishing activities. We report both average catch and revenue for the last available decade (2005-2014) [@Zeller2016; @Tai2017; @Sumaila:2015uc].
 
 ## Projecting species distributions under climate change
 
-We projected the future distribution of transboundary stocks using a dynamic bioclimatic envelope model (hereafter called DBEM). The DBEM determines the environmental space a species will occupy based on physiology, habitat suitability, depth and latitudinal ranges, and spatial population dynamics as well as preferences for sea temperature, salinity, oxygen content, sea ice extent (for polar species) and bathymetry. The DBEM then estimates species’ abundance and maximum catch potential (a proxy for maximum sustainable yield) over a regular spatial grid of 0.5 of latitude per 0.5 of longitude. Below we provide an overall description of the model. Please see @Cheung:2010dt; @Cheung:2009ud; @Cheung:2016jd for a more detailed version. Importantly, the DBEM is able to project catches by Exclusive Economic Zones that are consistent with observational-based estimates of catch from 1950 to 2016 [@Cheung:2016jd, Cheung et al. *in revision*].
+We projected the future distribution of transboundary stocks using a dynamic bioclimatic envelope model (hereafter called DBEM). The DBEM determines the environmental space a species will occupy based on physiology, habitat suitability, depth and latitudinal ranges, and spatial population dynamics as well as preferences for sea temperature, salinity, oxygen content, sea ice extent (for polar species) and bathymetry. The DBEM then estimates species’ abundance and maximum catch potential (a proxy for maximum sustainable yield) over a regular spatial grid of 0.5 of latitude per 0.5 of longitude. Below we provide an overall description of the model. Please see @Cheung:2010dt; @Cheung:2009ud; @Cheung:2016jd for a more detailed version. Importantly, the DBEM is able to project catches by Exclusive Economic Zones that are consistent with observational-based estimates of catch from 1950 to 2016 [@Cheung:2016jd, @cheung_marine_2021].
 
 <!-- Included more details of the DBEM in response to reviewer 3 -->
 For each species, the DBEM uses the Sea Around Us (www.searaundus.org) distributional data and environmental variables from 1970 to 2000 to estimate the current distribution and environmental profile of each species. Moreover, it projects the future habitat suitability in each grid-cell (*i*) based on the following components;
@@ -166,7 +166,7 @@ For each species, the DBEM uses the Sea Around Us (www.searaundus.org) distribut
 Hs = P(T_{i},TPP) *  P(Ba_{i}, Min_{D}, Max_{D}) * P(Hab_{i,j}, Hab_{Assoc}) * (Sal_{i}, Sal_{Assoc}) * P(Ice_{i}, Ice_{P})
 \end{equation}
 
-where *T* is seawater temperature, *TPP* is the species temperature profile, *Ba* is bathymetry, $Min_{D}$ and $Max{D}$ are the species minimum and maximum depth limits, *Hab* is the proportion of area of the habitat type *j* relative to the total seawater area of the cell *i*, $Hab_{Assoc}$ is an habitat association index, *Sal* is the salinity class of cell *i* and $Sal_{Assoc}$ is a salinity class association index. Finally, for polar regions and species, *Ice* is sea ice extent, and $Ice_{P}$ is association to sea ice. For pelagic species, the model uses environmental variables at the surface whereas demersal and benthic species’ distributions are driven by ocean bottom variables.
+where *T* is seawater temperature, *TPP* is the species temperature profile, *Ba* is bathymetry, $Min_{D}$ and $Max{D}$ are the species minimum and maximum depth limits, *Hab* is the proportion of area of the habitat type *j* relative to the total seawater area of the cell *i*, $Hab_{Assoc}$ is **a habitat** association index, *Sal* is the salinity class of cell *i* and $Sal_{Assoc}$ is a salinity class association index. Finally, for polar regions and species, *Ice* is sea ice extent, and $Ice_{P}$ is association to sea ice. For pelagic species, the model uses environmental variables at the surface whereas demersal and benthic species’ distributions are driven by ocean bottom variables.
 
 The DBEM also integrates each species preference profile with physiology and population dynamics to project relative biomass assuming that spatio-temporal dynamics are determined by intrinsic growth rate, larval dispersion, and adult migration;
 
@@ -199,7 +199,7 @@ lon_{ts} = \mu (lon_{per})
 \end{equation}
 
 
-where $lat_{per}$ and $lon_{per}$ are the latitudes and longitudes of the grid cells holding the specified percentile ($per^{th}$) of the projected transboundary stock abundance. To focus on areas where transboundary stocks are more abundant and fishing activities are more likely to take place, we included grid cells where the projected stock abundance within the neighboring EEZs sharing the stock was above the $95^{th}$ percentile. A sensitivity analysis using a subset of species (n = 34) for all EEZs  to examine the effects of different thresholds (per = $20^{th}$, $50^{th}$ and $90^{th}$ percentile) on the calculated index value showed no apparent difference between percentiles (Fig. \@ref(fig:toeFigureS7)). The centroid of each EEZ was estimated using the st package in R (Fig. \@ref(fig:toeFigureS5)). For each ensemble member, neighboring EEZs and transboundary stock, we computed the distance between centroids (i.e., EEZ and stock) using the geosphere package in R assuming the Earth is a perfect sphere and ignoring geographic barriers;
+where $lat_{per}$ and $lon_{per}$ are the latitudes and longitudes of the grid cells holding the specified percentile ($per^{th}$) of the projected transboundary stock abundance. **Fish stocks are not evenly distributed across their entire range, thus we focus on areas where transboundary stocks are more abundant and fishing activities are more likely to take place. Thus, we estimated the centroid of a stock only including grid cells where the projected stock abundance within the neighboring EEZs sharing the stock was above the $95^{th}$ percentile.** A sensitivity analysis using a subset of species (n = 34) for all EEZs  to examine the effects of different thresholds (per = $20^{th}$, $50^{th}$ and $90^{th}$ percentile) on the calculated index value showed no apparent difference between percentiles (Fig. \@ref(fig:toeFigureS7)). The centroid of each EEZ was estimated using the st package in R (Fig. \@ref(fig:toeFigureS5)). For each ensemble member, neighboring EEZs and transboundary stock, we computed the distance between centroids (i.e., EEZ and stock) using the geosphere package in R assuming the Earth is a perfect sphere and ignoring geographic barriers;
 
 \begin{equation}
 \label{eq:five}
@@ -285,7 +285,8 @@ grid.raster(img)
 
 ```
 
-On average, shifting transboundary stocks represented 27% to 23% (1 and 2 s.d. thresholds) of annual revenue from fisheries targeting transboundary stocks across the world's EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A). However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru).
+
+We estimated the participation of the transboundary stocks that are shifting between neighboring EEZs relative to the total revenue from all transboundary stocks that each EEZ has. On average, shifting transboundary stocks represented 27% to 23% (1 and 2 s.d. thresholds) of annual revenue from fisheries targeting transboundary stocks across the world's EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A). However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru).
 
 We estimated the current (i.e., 2005 - 2010) contribution of shifting stocks to yearly fishing revenue generated from fisheries targeting transboundary stocks within global EEZs for both thresholds (one and two s.d.). Within five years of the UN 2030 Agenda timeline, 979 transboundary stocks accounting for USD 5.3 billion in fishing revenue are projected to shift within 76 EEZs considering a two s.d. threshold (Fig. \@ref(fig:toeFigure3); above Fisheries >75th percentile). In this case, 321 stocks shifting in just eleven countries account for 4.2 billion USD (Fig. \@ref(fig:toeFigure3)). The number of transboundary stocks shifting from historical variability was highest in the EEZs of Spain (n = 122), France (n = 85), China and Portugal (both n = 73), and Senegal (n = 66) (Fig. \@ref(fig:toeFigure3)). The values are substantially higher when considering a more relaxed threshold. In this case, 2,136 stocks accounting for USD 24 billion in fishing revenue are projected to shift within five years of the UN 2030 Agenda timeline in 134 EEZs.
 
